--- a/src/Styles/tailwind.css
+++ b/src/Styles/tailwind.css
@@ -10,6 +10,7 @@
   --color-gray: #f1f1f2a1;
   --other-color: #172729;
   --color-href: #73eaff;
+  --color-accent-text: #00b2d2;
 }
 
 @media (prefers-color-scheme: light) {
@@ -22,6 +23,7 @@
     --color-gray: #555;
     --other-color: #f4f4f9;
     --color-href: #067285;
+    --color-accent-text: #004450;
     background-color: var(--color-primary) !important;
   }
 
